--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'French fiction'
 - !lcc 'PQ'
+- GITenberg
 title: Histoire de Sibylle
 url: http://www.gutenberg.org/ebooks/26824
